a couple of more minor changes

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                         BIBLIOGRAPHY FILE            %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% The `filecontents` command will crete a file in the inputs directory called
+%% The `filecontents` command will create a file in the inputs directory called
 %% refs.bib containing the references in the document, in case this file does
 %% not exist already.
 %% If you want to add a BibTeX entry, please don't add it directly to the
@@ -137,9 +137,15 @@ MRREVIEWER = {M. G. Stone},
        URL = {http://dx.doi.org/10.1142/S0218196798000247},
 }
 @article{KSW,
-title = {Simpler {M}altsev conditions for (weak) difference terms in locally finite varieties},
-author = {Kearnes, Keith and Szendrei, \'{A}gnes and Willard, Ross},
-note = {to appear}
+author = {Kearnes, Keith A. and Szendrei, {\'{A}}gnes and Willard, Ross and Kearnes, Keith A.},
+doi = {10.1007/s00012-017-0475-7},
+issn = {00025240},
+journal = {Algebra Universalis},
+number = {4},
+pages = {555--561},
+title = {{Simpler Maltsev conditions for (weak) difference terms in locally finite varieties}},
+volume = {78},
+year = {2017}
 }
 
 @article {MR3239624,
@@ -2461,7 +2467,7 @@ of the $n^2$ stages; the argument $(a,b)$ determines which stage is executed.
 \begin{lemma}
   \label{lem:19}
   The output of Algorithm~\ref{alg:new-2-1} is the Cayley table of a \ldto for
-  $Z_1 \cup U_{n^2}:=  \{(a, b,0),(a_0, b_0,1), (a_1, b_1,1), \dots, (a_{\l}, b_{\l}, 1)\}$.
+  $\{(a,b,0)\} \cup U_{n^2}$. %:=  \{(a, b,0),(a_0, b_0,1), (a_1, b_1,1), \dots, (a_{\l}, b_{\l}, 1)\}$.
 \end{lemma}
 
 \begin{proof}
