Changed the macro for Maltsev.

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -125,7 +125,7 @@
 \newcommand{\bbD}{\ensuremath{\mathbb{D}}}
 \newcommand{\bbS}{\ensuremath{\mathbb{S}}}
 \newcommand{\bbV}{\ensuremath{\operatorname{\mathbb{V}}}}
-\newcommand{\malcev}{Mal'tsev\xspace}
+\newcommand{\malcev}{Maltsev\xspace}
 \newcommand{\var}[1]{\ensuremath{\mathcal{#1}}}
 
 \newcommand{\upalpha}{\ensuremath{\alpha^{\uparrow}}}
