add forgotten changes

--- a/ijac/diffTerm-ijac-r1.tex
+++ b/ijac/diffTerm-ijac-r1.tex
@@ -4,6 +4,7 @@
 %% COPYRIGHT: (C) 2018 DeMeo, Freese, Valeriote
 
 \documentclass{ws-ijac}
+\usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage{rflatexmacs}
 \usepackage{wjdlatexmacs}
