--- a/ijac/refs.bib
+++ b/ijac/refs.bib
@@ -222,8 +222,7 @@ MRREVIEWER = {James B. Nation},
     MRCLASS = {08A05 (03C05 08-02 08B05)},
     MRNUMBER = {958685 (89m:08001)},
     MRREVIEWER = {Joel Berman},
-    note = {Available from:
-      \href{http://math.hawaii.edu/~ralph/Classes/619/HobbyMcKenzie-FiniteAlgebras.pdf}{math.hawaii.edu}}
+    URL= {http://math.hawaii.edu/~ralph/Classes/619/HobbyMcKenzie-FiniteAlgebras.pdf}
   }
 @article {MR0455543,
     AUTHOR = {Jones, Neil D. and Laaser, William T.},
